# xds

./: .bazelrc  .bufignore  BUF_INTEGRATION.md  BUILD  BUILD.buf  DEVELOPER.md  MODULE.bazel  PYTHON_SETUP.md  WORKSPACE  buf.gen.go.yaml  buf.gen.python.yaml  buf.gen.yaml  buf.yaml  go.mod  proto_gen.BUILD
.bcr/: README.md  metadata.template.json  presubmit.yml  source.template.json
.github/: dependabot.yml
.github/workflows/: buf-lint.yml  publish.yaml
bazel/: api_build_system.bzl  buf_build_system.bzl  cc_test.bzl  dependency_imports.bzl  go_test.bzl  proto_copy.bzl  proto_package.bzl  repositories.bzl  repository_locations.bzl  xds_go_test.bzl
ci/: azure-pipelines.yml  check.sh
go/: BUILD  BUILD.bazel  go.mod  go.sum
go/tools/: tools.go
go/udpa/annotations/: BUILD.bazel  migrate.pb.go  security.pb.go  sensitive.pb.go  status.pb.go  versioning.pb.go
go/udpa/data/orca/v1/: BUILD.bazel  orca_load_report.pb.go
go/udpa/service/orca/v1/: BUILD.bazel  orca.pb.go  orca_grpc.pb.go
go/udpa/type/v1/: BUILD.bazel  typed_struct.pb.go
go/validate/: validate.pb.go
go/xds/annotations/v3/: BUILD.bazel  migrate.pb.go  security.pb.go  sensitive.pb.go  status.pb.go  versioning.pb.go
go/xds/core/v3/: BUILD.bazel  authority.pb.go  cidr.pb.go  collection_entry.pb.go  context_params.pb.go  extension.pb.go  resource.pb.go  resource_locator.pb.go  resource_name.pb.go
go/xds/data/orca/v3/: BUILD.bazel  orca_load_report.pb.go
go/xds/service/orca/v3/: BUILD.bazel  orca.pb.go  orca_grpc.pb.go
go/xds/type/matcher/v3/: BUILD.bazel  cel.pb.go  domain.pb.go  http_inputs.pb.go  ip.pb.go  matcher.pb.go  range.pb.go  regex.pb.go  string.pb.go
go/xds/type/v3/: BUILD.bazel  cel.pb.go  range.pb.go  typed_struct.pb.go
python/: BUILD  pyproject.toml
python/udpa/annotations/: migrate_pb2.py  security_pb2.py  sensitive_pb2.py  status_pb2.py  versioning_pb2.py
python/udpa/data/orca/v1/: orca_load_report_pb2.py
python/udpa/service/orca/v1/: orca_pb2.py
python/udpa/type/v1/: typed_struct_pb2.py
python/validate/: BUILD.bazel
python/xds/annotations/v3/: migrate_pb2.py  security_pb2.py  sensitive_pb2.py  status_pb2.py  versioning_pb2.py
python/xds/core/v3/: BUILD.bazel  authority_pb2.py  cidr_pb2.py  collection_entry_pb2.py  context_params_pb2.py  extension_pb2.py  resource_locator_pb2.py  resource_name_pb2.py  resource_pb2.py
python/xds/data/orca/v3/: orca_load_report_pb2.py
python/xds/service/orca/v3/: orca_pb2.py
python/xds/type/matcher/v3/: cel_pb2.py  domain_pb2.py  http_inputs_pb2.py  ip_pb2.py  matcher_pb2.py  range_pb2.py  regex_pb2.py  string_pb2.py
python/xds/type/v3/: cel_pb2.py  range_pb2.py  typed_struct_pb2.py
tools/: BUILD  buf_generate.sh  generate_protobuf.sh  language_config.py  update_buf_and_gazelle.sh
udpa/annotations/: security.proto
udpa/data/orca/v1/: orca_load_report.proto
udpa/service/orca/v1/: BUILD  orca.proto
udpa/type/v1/: BUILD  typed_struct.proto
xds/annotations/v3/: security.proto
xds/core/v3/: BUILD  BUILD.buf-demo  authority.proto  cidr.proto  collection_entry.proto  context_params.proto  extension.proto  resource.proto  resource_locator.proto  resource_name.proto
xds/data/orca/v3/: BUILD  orca_load_report.proto
xds/service/orca/v3/: BUILD  orca.proto
xds/type/matcher/v3/: BUILD  cel.proto  domain.proto  http_inputs.proto  ip.proto  matcher.proto  range.proto  regex.proto  string.proto
xds/type/v3/: BUILD  cel.proto  range.proto  typed_struct.proto
