load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "type",
    srcs = [
        "cel.pb.go",
        "cel.pb.validate.go",
        "range.pb.go",
        "range.pb.validate.go",
        "typed_struct.pb.go",
        "typed_struct.pb.validate.go",
    ],
    importpath = "github.com/cncf/xds/go/xds/type/v3",
    visibility = ["//visibility:public"],
    deps = [
        "//go/xds/annotations/v3:annotations",
        "@com_envoyproxy_protoc_gen_validate//validate:go_default_library",
        "@dev_cel//:go_default_library",
        "@org_golang_google_genproto_googleapis_api//expr/v1alpha1",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
